[package]
name = "hips-lib"
version = "0.2.0"
edition = "2021"
authors = ["Andrej G."]
license = "MIT"
description = "A library which hides and retrieves text secrets within images."
readme = "README.md"
homepage = "https://github.com/Kaesebrot84/hips-lib"
keywords = ["image", "steganography", "cryptography", "encoding"]
categories = ["steganography", "cryptography", "encoding"]

[dependencies]
image = { version = "0.24.5", optional = true }

[features]
image = ["dep:image"]
